--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ APP_SECRET=5cca03eb72c9b7224ebc18b5f3011999
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=postgres://postgres:KNoSyDe94!@127.0.0.1:5432/snowTricks
 ###< doctrine/doctrine-bundle ###
