--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/debug-bundle": "^5.0",
         "symfony/maker-bundle": "^1.21",
         "symfony/stopwatch": "^5.0",
