--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,7 +11,7 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
-            $photoDir: "%kernel.project_dir%/public/images/figures"
+            $photoDir: "%kernel.project_dir%/public/images/figures/illustrations"
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
