--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,6 +12,7 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
             $photoDir: "%kernel.project_dir%/public/images/figures/illustrations"
+            $pictureDir: "%kernel.project_dir%/public/images/pictures"
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
