--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
         "symfony/monolog-bundle": "^3.5",
+        "symfony/security-bundle": "5.0.*",
         "symfony/validator": "5.0.*",
         "symfony/yaml": "5.0.*"
     },
