log out done + update template folder

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,3 +22,7 @@ security:
             form_login:
                 login_path: sign_in
                 check_path: sign_in
+
+            logout:
+                path: log_out
+                target: home
