--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/framework-bundle": "5.0.*",
         "symfony/monolog-bundle": "^3.5",
         "symfony/security-bundle": "5.0.*",
+        "symfony/string": "5.0.*",
         "symfony/validator": "5.0.*",
         "symfony/yaml": "5.0.*"
     },
