--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/monolog-bundle": "^3.5",
         "symfony/security-bundle": "5.0.*",
         "symfony/string": "5.0.*",
+        "symfony/swiftmailer-bundle": "^3.5",
         "symfony/validator": "5.0.*",
         "symfony/yaml": "5.0.*"
     },
