--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "symfony/security-bundle": "5.0.*",
         "symfony/string": "5.0.*",
         "symfony/validator": "5.0.*",
-        "symfony/yaml": "5.0.*",
-        "symfonycasts/reset-password-bundle": "^1.1"
+        "symfony/yaml": "5.0.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
