--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "friendsofphp/php-cs-fixer": "^2.17",
         "symfony/debug-bundle": "^5.0",
         "symfony/maker-bundle": "^1.21",
         "symfony/stopwatch": "^5.0",
